--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,9 @@
 # Edit next line to provide your own name.
 title: Chloe Whitaker | Professional Portfolio
 # Edit next line, replacing 'techfolios' with your github username
-url: "codovey"
+url: "codovey.github.io"
 # Edit next line so that baseurl is "" if your repo is <username>.github.io
-baseurl: "https://codovey.github.io"
+baseurl: ""
 
 # OPTIONAL CHANGES
 ## Specify the theme using any of the css files in css/techfolio-theme
